suggestion articles html templates created

--- a/blog.html
+++ b/blog.html
@@ -404,11 +404,11 @@
               </div>
 
               <div class="article-social-media">
-                <span class="article-social-media__text">
-                  اشتراک گذاری:
-                </span>
+                <span class="article-social-media__text"> اشتراک گذاری: </span>
                 <a href="#" class="article-social-media__link">
-                  <i class="fab fa-telegram-plane article-social-media__icon"></i>
+                  <i
+                    class="fab fa-telegram-plane article-social-media__icon"
+                  ></i>
                 </a>
                 <a href="#" class="article-social-media__link">
                   <i class="fab fa-twitter article-social-media__icon"></i>
@@ -417,9 +417,42 @@
                   <i class="fab fa-facebook-f article-social-media__icon"></i>
                 </a>
               </div>
+            </div>
 
+            <div class="suggestion-articles">
+              <div class="row">
 
+                <div class="col-6">
+                  <div
+                    class="suggestion-articles__right suggestion-articles__content"
+                  >
+                    <a href="#" class="suggestion-articles__icon-link">
+                      <i
+                        class="fas fa-arrow-right suggestion-articles__icon"
+                      ></i>
+                    </a>
+                    <a href="#" class="suggestion-articles__link">
+                      سریع ترین و بهترین راه یادگیری جاوا اسکریپت چیست؟ تجربه برنامه نویسان
+                    </a>
+                  </div>
+                </div>
 
+                <div class="col-6">
+                  <div
+                    class="suggestion-articles__left suggestion-articles__content"
+                  >
+                    <a href="#" class="suggestion-articles__icon-link">
+                      <i
+                        class="fas fa-arrow-left suggestion-articles__icon"
+                      ></i>
+                    </a>
+                    <a href="#" class="suggestion-articles__link">
+                      سریع ترین و بهترین راه یادگیری جاوا اسکریپت چیست؟ تجربه برنامه نویسان
+                    </a>
+                  </div>
+                </div>
+
+              </div>
             </div>
           </div>
 
