comment html template created

--- a/blog.html
+++ b/blog.html
@@ -421,7 +421,6 @@
 
             <div class="suggestion-articles">
               <div class="row">
-
                 <div class="col-6">
                   <div
                     class="suggestion-articles__right suggestion-articles__content"
@@ -432,7 +431,8 @@
                       ></i>
                     </a>
                     <a href="#" class="suggestion-articles__link">
-                      سریع ترین و بهترین راه یادگیری جاوا اسکریپت چیست؟ تجربه برنامه نویسان
+                      سریع ترین و بهترین راه یادگیری جاوا اسکریپت چیست؟ تجربه
+                      برنامه نویسان
                     </a>
                   </div>
                 </div>
@@ -447,12 +447,28 @@
                       ></i>
                     </a>
                     <a href="#" class="suggestion-articles__link">
-                      سریع ترین و بهترین راه یادگیری جاوا اسکریپت چیست؟ تجربه برنامه نویسان
+                      سریع ترین و بهترین راه یادگیری جاوا اسکریپت چیست؟ تجربه
+                      برنامه نویسان
                     </a>
                   </div>
                 </div>
-
               </div>
+            </div>
+
+            <div class="comments">
+              <span class="comments__title"> دیدگاهتان را بنویسید </span>
+              <span class="comments__text">
+                با عنوان <a href="#">alir.ai</a> وارد شده اید.
+                <a href="#">خارج میشوید؟</a> بخش های موردنیاز علامت گذاری شده
+                اند.*</span
+              >
+              <div class="comments__content">
+                <span class="comments__content-title">دیدگاه*</span>
+                <textarea class="comments__content-textarea"></textarea>
+              </div>
+              <button type="submit" class="comments__button">
+                فرستادن دیدگاه
+              </button>
             </div>
           </div>
 
