login page first part designed

--- a/blog.html
+++ b/blog.html
@@ -464,12 +464,12 @@
               >
               <div class="comments__content">
                 <span class="comments__content-title">دیدگاه*</span>
-                <textarea class="comments__content-textarea"></textarea>
+                <text area class="comments__content-textarea"></text>
               </div>
               <button type="submit" class="comments__button">
                 فرستادن دیدگاه
               </button>
-            </div> 
+            </div>
           </div>
 
           <div class="col-4">
